tests/baselines/reference/destructuringArrayBindingPatternAndAssignment3.errors.txt
tests/cases/conformance/es6/destructuring/destructuringArrayBindingPatternAndAssignment3.ts(19,5): error TS2322: Type 'undefined[]' is not assignable to type 'H'.
  Property '0' is missing in type 'undefined[]'.
tests/cases/conformance/es6/destructuring/destructuringArrayBindingPatternAndAssignment3.ts(19,5): error TS2461: Type 'H' is not an array type.
tests/cases/conformance/es6/destructuring/destructuringArrayBindingPatternAndAssignment3.ts(20,6): error TS2461: Type 'undefined' is not an array type.
tests/cases/conformance/es6/destructuring/destructuringArrayBindingPatternAndAssignment3.ts(20,13): error TS2461: Type 'undefined' is not an array type.
tests/cases/conformance/es6/destructuring/destructuringArrayBindingPatternAndAssignment3.ts(21,13): error TS2462: A rest element must be last in an array destructuring pattern
tests/cases/conformance/es6/destructuring/destructuringArrayBindingPatternAndAssignment3.ts(22,6): error TS2322: Type 'string' is not assignable to type 'Number'.
  Property 'toFixed' is missing in type 'String'.
tests/cases/conformance/es6/destructuring/destructuringArrayBindingPatternAndAssignment3.ts(23,5): error TS2461: Type '{}' is not an array type.


==== tests/cases/conformance/es6/destructuring/destructuringArrayBindingPatternAndAssignment3.ts (7 errors) ====
    interface H {
        0: number,
        1: string
    }
    interface J extends Array<Number> {
        2: number;
    }
    
    function bar(): J {
        return <[number, number, number]>[1, 2, 3];
    }
    
    function gg(idx: number) {
        return {
            [idx]: true
        }
    }
    
    var [h, g, i]: H = [];
        ~~~~~~~~~
!!! error TS2322: Type 'undefined[]' is not assignable to type 'H'.
!!! error TS2322:   Property '0' is missing in type 'undefined[]'.
        ~~~~~~~~~
!!! error TS2461: Type 'H' is not an array type.
    var [[[y]], [[[[z]]]]] = []
         ~~~~~
!!! error TS2461: Type 'undefined' is not an array type.
                ~~~~~~~~~
!!! error TS2461: Type 'undefined' is not an array type.
    var [, , ...w4, , ] = []
                ~~
!!! error TS2462: A rest element must be last in an array destructuring pattern
    var [a = "string", b, c] = bar();
         ~
!!! error TS2322: Type 'string' is not assignable to type 'Number'.
!!! error TS2322:   Property 'toFixed' is missing in type 'String'.
    var [r, s, t] = gg(1);
        ~~~~~~~~~
!!! error TS2461: Type '{}' is not an array type.